# book_tracker

./: .gitignore  docker-compose.yml  pyproject.toml
src/booktracker/: admin.py  apps.py  models.py
src/booktracker/migrations/: 0001_initial.py  0002_book_cover.py  0002_rename_author_id_book_author_and_more.py
src/config/: settings.py  urls.py
src/users/: admin.py  models.py
src/users/migrations/: 0001_initial.py
